--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,15 @@
 {
-  "name": "template-typescript",
-  "remoteUser": "template-typescript",
+  "name": "space-traders",
+  "remoteUser": "space-traders",
   "dockerComposeFile": "./compose.dev.yaml",
   "service": "app",
   "postCreateCommand": "bun install",
-  "workspaceFolder": "/template-typescript",
+  "workspaceFolder": "/space-traders",
   "overrideCommand": true,
   "shutdownAction": "none",
+  "features": {
+    "ghcr.io/itsmechlark/features/1password": "latest"
+  },
   "customizations": {
     "vscode": {
       "extensions": [
