--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,6 +1,6 @@
 # Shared
-APP_NAME=template-typescript
-PROJECT_ROOT=/template-typescript
+APP_NAME=space-traders
+PROJECT_ROOT=/space-traders
 NETWORK_NAME=${APP_NAME}-network
 
 APP_PREFIX=${APP_NAME}
