--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "space-traders",
-  "version": "2.0.0",
-  "description": "The template of TypeScript.",
+  "version": "0.0.0",
+  "description": "Play Space Traders API",
   "author": "Kawano Kenichi <kenichi.k.820@gmail.com>",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint --fix --cache ./src",
     "format": "prettier . --write",
     "typing": "tsc --project tsconfig.json --pretty --noEmit",
     "check:all": "npm-run-all -s check:type check:format check:lint",
-    "test": "jest --runInBand",
-    "test:cov": "jest --runInBand --coverage=true",
-    "test:watch": "jest --runInBand --watch",
+    "test": "vitest --config vitest.config.ts",
+    "test:cov": "vitest --config vitest.config.ts --coverage=true",
     "start": "op run -- bun run"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "@zodios/core": "^10.9.6",
     "fp-ts": "^2.16.3",
     "ts-pattern": "^5.0.8",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bun": "^1.1.1",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.27",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -38,14 +38,14 @@
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^14.0.0",
     "husky": "^9.0.11",
-    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
+    "openapi-zod-client": "^1.18.1",
     "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.2",
-    "typescript-eslint": "^7.2.0"
+    "typescript-eslint": "^7.2.0",
+    "vitest": "^1.6.0"
   }
 }
